--- a/projects/d-datatable/src/lib/datatable/datatable.component.css
+++ b/projects/d-datatable/src/lib/datatable/datatable.component.css
@@ -1,144 +1,154 @@
 .d-table {
-    display: table;
-    border: 1px solid lightgrey;
-    border-collapse: collapse;
-    margin: 0;
-    padding: 0;
-    width: 100%;
-    table-layout: fixed;
-    background-color: white;
+  display: table;
+  border: 1px solid lightgrey;
+  border-collapse: collapse;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  table-layout: fixed;
+  background-color: white;
+}
+
+.d-table-heading {
+  font-size: x-large;
+  font-weight: 800;
+}
+
+.d-table-name {
+  display: table;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  table-layout: fixed;
+  background-color: white;
 }
 
 .d-table-checkbox-width {
-    width: 5%;
+  width: 5%;
 }
 
 .d-table-height {
-    overflow-y: auto;
-    overflow-x: auto;
+  overflow-y: auto;
+  overflow-x: auto;
 }
 
 .d-table-height::-webkit-scrollbar-track {
-    -webkit-box-shadow: inset 6PX 0 6px rgba(0, 0, 0, 0.3);
+  -webkit-box-shadow: inset 6px 0 6px rgba(0, 0, 0, 0.3);
 }
 
 .d-table-height::-webkit-scrollbar {
-    width: 6px;
-    height: 6px;
+  width: 6px;
+  height: 6px;
 }
 
 .d-table .title {
-    margin: .5em 0 .75em;
+  margin: 0.5em 0 0.75em;
 }
 
 .d-table .d-table-header {
-    display: table-header-group;
-    text-align: left;
-    /* font-size: 0.8rem; */
-    cursor: pointer;
-    background-color: #0097e0;
-    color: white;
+  display: table-header-group;
+  text-align: left;
+  /* font-size: 0.8rem; */
+  cursor: pointer;
+  background-color: #0097e0;
+  color: white;
 }
 
 .d-table .d-table-col {
-    vertical-align: middle;
+  vertical-align: middle;
 }
 
 .d-table .d-table-row {
-    border: 1px solid lightgrey;
-    display: table-row;
-    height: 30px;
+  border: 1px solid lightgrey;
+  display: table-row;
+  height: 30px;
 }
 
 .d-table .d-table-col {
-    white-space: nowrap;
-    width: 200px;
-    overflow: hidden;
-    text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .d-table .d-table-row:hover {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 .d-table .d-table-col {
-    display: table-cell;
-    padding: .525em;
-    text-align: left;
+  display: table-cell;
+  padding: 0.525em;
+  text-align: left;
 }
 
 .footer {
-    margin: .1em 0 .35em;
-    cursor: pointer;
-    text-align: center;
+  margin: 0.1em 0 0.35em;
+  cursor: pointer;
+  text-align: center;
 }
 
 .col-group {
-    text-align: left!important;
+  text-align: left !important;
 }
 
 .d-table-filter-icon {
-    position: absolute;
-    top: 10px;
-    right: 0;
-    display: block;
-    width: 38px;
-    height: 38px;
-    line-height: 38px;
-    text-align: center;
+  position: absolute;
+  top: 10px;
+  right: 0;
+  display: block;
+  width: 38px;
+  height: 38px;
+  line-height: 38px;
+  text-align: center;
 }
 
-
-
 .d-table .d-table-col:before {
-    content: attr(data-label);
-    float: left;
-    font-weight: bold;
+  content: attr(data-label);
+  float: left;
+  font-weight: bold;
 }
 
 .col-hidden {
-    display: none!important;
+  display: none !important;
 }
 
 .checkbox-col {
-    text-align: unset!important;
+  text-align: unset !important;
 }
 
 .d-table-icon-right {
-    float: right;
+  float: right;
 }
 
 .text-input-width {
-    width: 92%;
+  width: 92%;
 }
 
-.custom-search{
-    margin-bottom: -10px;
+.custom-search {
+  margin-bottom: -10px;
 }
 
-.custom-search-input{
-    padding: 2px 10px !important;
-    height: auto !important;
+.custom-search-input {
+  padding: 2px 10px !important;
+  height: auto !important;
 }
 
-.btn-custom-search{
-    padding: 0 7px;
+.btn-custom-search {
+  padding: 0 7px;
 }
 
 .d-tabel-matgin {
-    margin-top: 10px;
-    margin-bottom: 10px;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 .dropdown-item {
-    cursor: pointer;
-
+  cursor: pointer;
 }
 .d-table-checkbox {
-    float: right;
-    padding-left: 0.5rem;
+  float: right;
+  padding-left: 0.5rem;
 }
 
-.pagination > *{
+.pagination > * {
   cursor: pointer;
   font-weight: 700;
   font-size: 15px;
@@ -152,55 +162,78 @@
   align-items: center;
 }
 
-.pagination > *:hover{
+.pagination > *:hover {
   background: #ccc;
 }
 
-.pagination > *.active{
+.pagination > *.active {
   background: #0097e0;
   color: #fff;
 }
 
-.pagination > .ellipsis{
+.pagination > .ellipsis {
   pointer-events: none;
 }
 
 .custom-search .dropdown-item {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .custom-search .dropdown-item:hover {
-    text-decoration: none;
-    background-color: #02a1f0;
-    color: #fff;
-    border-radius: 100px;
-    outline: none;
-    cursor: pointer;
+  text-decoration: none;
+  background-color: #02a1f0;
+  color: #fff;
+  border-radius: 100px;
+  outline: none;
+  cursor: pointer;
 }
 
-
 .d-pagination {
-    display: flex;
-    justify-content: center;
-  }
-  
-  .d-pagination > div {
-    background-color: #f1f1f1;
-    margin: 5px;
-    padding: 5px;
-    text-align: center;
-    cursor: pointer;
-    font-size: 11px;
-  }
+  display: flex;
+  justify-content: center;
+}
 
-  .d-pagination :hover {
-    background-color:DodgerBlue;
-    color: #f1f1f1;
-  }
+.d-pagination > div {
+  background-color: #f1f1f1;
+  margin: 5px;
+  padding: 5px;
+  text-align: center;
+  cursor: pointer;
+  font-size: 11px;
+}
 
-  .d-pagination > .d-active_page {
-    background-color:DodgerBlue;
-    color: #f1f1f1;
-  }
+.d-pagination :hover {
+  background-color: DodgerBlue;
+  color: #f1f1f1;
+}
+
+.d-pagination > .d-active_page {
+  background-color: DodgerBlue;
+  color: #f1f1f1;
+}
+
+li {
+  list-style: none;
+  cursor: pointer;
+}
+
+.col-name {
+  padding-left: 0.6rem !important;
+}
+
+li:hover {
+  background-color: #0097e0 !important;
+  color: white;
+}
+
+ul {
+  margin: 0px !important;
+  padding-left: 0rem !important;
+}
+
+.custom-search-input {
+  padding: 2px 10px !important;
+  height: auto !important;
+}
