search dropdown style updated.

--- a/projects/d-datatable/src/lib/datatable/datatable.component.css
+++ b/projects/d-datatable/src/lib/datatable/datatable.component.css
@@ -4,7 +4,7 @@
   border-collapse: collapse;
   margin: 0;
   padding: 0;
-  width: 100%;
+  width: 99.9%;
   table-layout: fixed;
   background-color: white;
 }
@@ -217,6 +217,11 @@
 li {
   list-style: none;
   cursor: pointer;
+  margin: 0.3rem 0rem;
+}
+
+li > a {
+  margin: 0.3rem 0rem;
 }
 
 .col-name {
@@ -231,6 +236,10 @@ li:hover {
 ul {
   margin: 0px !important;
   padding-left: 0rem !important;
+  position: absolute;
+  background: white;
+  width: 14%;
+  border: 1px solid lightgrey;
 }
 
 .custom-search-input {
