--- a/projects/d-datatable/src/lib/datatable/datatable.component.css
+++ b/projects/d-datatable/src/lib/datatable/datatable.component.css
@@ -146,6 +146,7 @@
 .d-table-checkbox {
   float: right;
   padding-left: 0.5rem;
+  padding-right: 0.5rem;
 }
 
 .pagination > * {
@@ -245,4 +246,13 @@ ul {
 .custom-search-input {
   padding: 2px 10px !important;
   height: auto !important;
+}
+
+.custom-btn {
+  background-color: #0097e0;
+  color: white;
+  cursor: pointer;
+  height: 24px;
+  width: 23px;
+  border-style: none;
 }
